# florida_chatbot

./: .gitignore  01_etl_cities.ipynb  02_where_to_eat_scrapping.ipynb  03_where_to_stay_scrapings.ipynb  04_family_fun.ipynb  05_outdoor.ipynb  06_agent_test.ipynb  07_chatbot_2.ipynb  08_chatbot3.ipynb  activities.csv  pyproject.toml  webscraping.ipynb
