[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Javier <7.matute@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
streamlit = "^1.41.1"
folium = "^0.19.4"
ipykernel = "^6.29.5"
geopy = "^2.4.1"
textblob = "^0.18.0.post0"
langgraph = "0.2.45"
langchain-google-genai = "2.0.4"
neo4j = "^5.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
